change the create new auction api test to conform to the api definition
