# api.yml
@@ -30,10 +30,15 @@ paths:
           schema:
             $ref: "#/definitions/Auction"
       responses:
-        405:
+        422:
           description: "Invalid input"
         201:
           description: "Created."
+          headers:
+            Location:
+                schema:
+                  type: string
+                description: Url of the newly created auction
   /auction/{auction_id}:
     get:
       tags:
